# TP_Homework

./: readme.md
.github/workflows/: main.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main.h  main_test.cpp  test.cpp  test.h
task3/: CMakeLists.txt  main_lib.cpp
task3/include/: buffer.h
task3/src/: CMakeLists.txt  buffer.cpp
